--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -40,6 +40,7 @@ bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ESCMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Forward_Backward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Forward_Backward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Left_Right",Key=A,Scale=-1.000000)
