--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,10 @@ ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure.Method=0
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -60,5 +64,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
