--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,8 +21,10 @@ GlobalDefaultGameMode=/Game/Blueprints/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.MotionBlur=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
