--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,7 @@ r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.MotionBlur=False
+r.GenerateMeshDistanceFields=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -66,5 +67,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
